--- a/sass/layouts/_sections.scss
+++ b/sass/layouts/_sections.scss
@@ -72,8 +72,8 @@ section {
       background-image: url("/images/bg-intro-desktop.svg");
       background-repeat: no-repeat;
       background-size: 123%;
-      width: 165%;
-      background-position: 0% 70%;
+      width: 160%;
+      background-position: -9% 70%;
     }
   }
 
